--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ div.cls_087{font-family:"Calibri Bold",serif;font-size:30.1px;color:rgb(30,26,22
 -->
 </style>
 <script type="text/javascript" src="8170047c-6175-11ec-a980-0cc47a792c0a_id_8170047c-6175-11ec-a980-0cc47a792c0a_files/wz_jsgraphics.js"></script>
+  <title> Medical Science and Therapy Pharma</title>
 </head>
 <body style="background-color: black;">
 <div style="position:absolute;left:50%;margin-left:-595px;top:0px;width:1190px;height:841px;border-style:outset;overflow:hidden">
