--- a/index.html
+++ b/index.html
@@ -48,13 +48,20 @@
   </div>
 
 
+  <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Homes</a>
+    <a href="#product" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Product</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About us</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Contact us</a>
+  </div>
 
   <!-- Page content -->
   <div class="w3-content" style="max-width:100%;margin-top:46px; background-image: url(images/background01.jpg)">
-    <img src="images/background01.jpg" style="width:100%;">
-    <div class="bottom-left">
-      <img src="images/womens.jpg">
-    </div>
+    <img src="images/background02.jpg" style="width:100%;">
+    <!--<div class="bottom-left">
+      <img src="images/womens1.jpg" class="img-thumbnail">
+    </div>-->
   </div>
 
   
