removed old company info

--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>MST PHARMA &mdash; Colorlib Template</title>
+  <title>MST PHARMA &mdash;   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -454,8 +454,8 @@
                 
               Copyright &copy;
               <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
-                class="text-primary">Colorlib</a>
+              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://  .com" target="_blank"
+                class="text-primary">  </a>
                 
             </p>
           </div>
