--- a/about.html
+++ b/about.html
@@ -316,8 +316,8 @@
                 
               Copyright &copy;
               <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
-                class="text-primary">Colorlib</a>
+              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://  .com" target="_blank"
+                class="text-primary">  </a>
                 
             </p>
           </div>
