--- a/index.html
+++ b/index.html
@@ -155,36 +155,36 @@
         <div class="row">
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
             <span class="tag">Sale</span>
-            <a href="shop-single.html"> <img src="images/product/ambrocline-dx.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Ambrocline-DX</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/ambrocline-dx.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">Ambrocline-DX</a></h3>
             <p class="price"><del>95.00</del> &mdash; $55.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product/ambrocline.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Ambrocline</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/ambrocline.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">Ambrocline</a></h3>
             <p class="price">$70.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product/kaaf-all.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">KAAF ALL</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/kaaf-all.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">KAAF ALL</a></h3>
             <p class="price">$120.00</p>
           </div>
 
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
 
-            <a href="shop-single.html"> <img src="images/product/s9reacharge.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">S9 Reacharge</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/s9reacharge.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">S9 Reacharge</a></h3>
             <p class="price"><del>45.00</del> &mdash; $20.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product/momspro.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">S-MomsPro</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/momspro.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">S-MomsPro</a></h3>
             <p class="price">$38.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
             <span class="tag">Sale</span>
-            <a href="shop-single.html"> <img src="images/product/rokcool.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Rokcool</a></h3>
+            <a href="ambrocline.html"> <img src="images/product/rokcool.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="ambrocline.html">Rokcool</a></h3>
             
           </div>
         </div>
@@ -209,26 +209,26 @@
             <div class="nonloop-block-3 owl-carousel">
 
               <div class="text-center item mb-4">
-                <a href="shop-single.html"> <img src="images/product_03.png" alt="Image"></a>
-                <h3 class="text-dark"><a href="shop-single.html">Umcka Cold Care</a></h3>
+                <a href="ambrocline.html"> <img src="images/product_03.png" alt="Image"></a>
+                <h3 class="text-dark"><a href="ambrocline.html">Umcka Cold Care</a></h3>
                 <p class="price">$120.00</p>
               </div>
 
               <div class="text-center item mb-4">
-                <a href="shop-single.html"> <img src="images/product_01.png" alt="Image"></a>
-                <h3 class="text-dark"><a href="shop-single.html">Umcka Cold Care</a></h3>
+                <a href="ambrocline.html"> <img src="images/product_01.png" alt="Image"></a>
+                <h3 class="text-dark"><a href="ambrocline.html">Umcka Cold Care</a></h3>
                 <p class="price">$120.00</p>
               </div>
 
               <div class="text-center item mb-4">
-                <a href="shop-single.html"> <img src="images/product_02.png" alt="Image"></a>
-                <h3 class="text-dark"><a href="shop-single.html">Umcka Cold Care</a></h3>
+                <a href="ambrocline.html"> <img src="images/product_02.png" alt="Image"></a>
+                <h3 class="text-dark"><a href="ambrocline.html">Umcka Cold Care</a></h3>
                 <p class="price">$120.00</p>
               </div>
 
               <div class="text-center item mb-4">
-                <a href="shop-single.html"> <img src="images/product_04.png" alt="Image"></a>
-                <h3 class="text-dark"><a href="shop-single.html">Umcka Cold Care</a></h3>
+                <a href="ambrocline.html"> <img src="images/product_04.png" alt="Image"></a>
+                <h3 class="text-dark"><a href="ambrocline.html">Umcka Cold Care</a></h3>
                 <p class="price">$120.00</p>
               </div>
 
