--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
     </div>
     
 
-    <div class="site-section bg-light custom-border-bottom" data-aos="fade">
+   <!-- <div class="site-section bg-light custom-border-bottom" data-aos="fade">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 site-section-heading text-center pt-4">
@@ -258,7 +258,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <footer class="site-footer">
